Several classes changed to record, sonar happy too